# stock-manager

./: .gitignore  LICENSE  README.md  autorun.inf  dockerfile  init.bat  script.iss
.github/workflows/: build.yaml  git.yaml  linux.yaml  test.yaml  windows.yaml
app_deb/DEBIAN/: control
src/: CMakeLists.txt  app.c  makefile
src/client/: manage.c
src/lib/: command.c  db.c  global.c  login.c  print.c  sh.c
src/service/: command.c  sh.c
src/util/: command.h  db.h  global.h  login.h  print.h  sh.h
